--- a/src/app/index.css
+++ b/src/app/index.css
@@ -37334,7 +37334,7 @@ html.ios {
 
 
 .margin-bottom-25 {
-			margin-bottom: 25px;
+			margin-bottom: 25px !important;
 		}
 		.padding-top-25 {
 			padding-top: 25px !important;
