--- a/src/app/index.css
+++ b/src/app/index.css
@@ -46,3 +46,58 @@
 			color: darkslateblue !important;
 			font-weight: bold !important; 
 		}
+
+		.active .content:first-child {
+		    background-color: mintcream !important;
+		}
+
+		.modelBox {
+			display: none
+		}
+
+		.modelBox.active {
+			width: 100%;
+		    height: 100vh;
+		    position: fixed;
+		    top: 0;
+		    left: 0;
+		    background-color: black;
+		    opacity: 0.9;
+		    z-index: 2;
+		    display: block;
+		}
+
+		.parent_block {
+		    width: 100%;
+		    height: 25vh;
+		    color: snow;
+		    font-weight: bolder;
+		}
+
+		.wordName {
+		    font-size: 26px;
+		    text-align: center;
+		    padding-top: 6vh;
+		}
+
+		#resultShow {
+		    padding-top: 5vh;
+		    text-align: center;
+		    font-size: 20px;
+		}
+
+		.padding-bottom-10 {
+			padding-bottom: 10px;
+		}
+
+		.pointer{
+			cursor: pointer;		
+		}
+		
+		.allignCenter{
+			text-align: center;
+		}
+
+		.event {
+			padding-bottom : 10px !important;
+		}
